objects/Agreements__c.object
<CustomObject>
    <description>Agreements (Contracts) custom implementation with sharing rules definitions.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <formula>DATE(YEAR(Agreement_Start_Date__c) + FLOOR(Agreement_Term_months__c /12) , IF(MOD(MONTH(Agreement_Start_Date__c ) + Agreement_Term_months__c ,12)=0,12,MOD(MONTH(Agreement_Start_Date__c ) + Agreement_Term_months__c ,12)),DAY(Agreement_Start_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Term_months__c</fullName>
        <label>Agreement Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Adress__c</fullName>
        <formula>Account_Name__r.BillingPostalCode &amp; &quot; &quot; &amp;  Account_Name__r.BillingCity &amp; &quot; &quot;  &amp; Account_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account_Name__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Signed_Date__c</fullName>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Title__c</fullName>
        <formula>Customer_Signed_By__r.sf42_de_Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Signed Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Expiration_Notice__c</fullName>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_AG_Billing_Street__c</fullName>
        <formula>Account_Name__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Account_Name__r.ShippingPostalCode &amp; &quot; &quot; &amp; Account_Name__r.ShippingCity &amp; &quot; &quot; &amp; Account_Name__r.ShippingState</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <formula>Account_Name__r.ShippingCountry</formula>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <formula>Account_Name__r.ShippingStreet</formula>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Agreement_Agent_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Agent 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PT_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Agreement_Agent_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Agent 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PT_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Agreement_Agent_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Agent 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PT_Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Area_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PT_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PT_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Email_Address_Agent_1__c</fullName>
        <formula>ptt_Agreement_Agent_1__r.Email</formula>
        <label>Email Address Agent 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Email_Address_Agent_2__c</fullName>
        <formula>ptt_Agreement_Agent_2__r.Email</formula>
        <label>Email Address Agent 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pttt_Email_Address_Agent_3__c</fullName>
        <formula>ptt_Agreement_Agent_3__r.Email</formula>
        <label>Email Address Agent 3</label>
        <type>Text</type>
    </fields>
    <label>PT - Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>